<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JNSGameIME</string>
    <string name="controller">Controller</string>
    <string name="tpconfig">Touch Configure</string>
    <string name="settings">Settings</string>
    <string name="game">Games</string>
    <string name="advance">Advance</string>
    <string name="controller_1">Controller 1</string>
    <string name="perference_title">JNSGameIMESettings</string>
    <string name="button_config">Key mapping</string>
    <string name="set_ime">Set device as IME</string>
    <string name="select_ime">Select IME</string>
    <string name="open_device_error">Open /dev/key_manager error</string>
    <string name="select_ime_info">Press here to select the JNSPS IME \n 
    							If JNSPS IME is not shown, enable it under Settings->Language and Keyboard
    </string>
    <string name="clear_controller_1">Clear the key map of Controller</string>
    <string name="game_key_config">Key Map</string>
    <string name="str_input_key_tip">Please press a Key</string>
    <string name="fileNameEditText">default</string>
    <string name="saveFileYesBtn">Sure</string>
    <string name="noFileYesBtn">Cancel</string>
    <string name="save_file_title">Save File</string>
    <string name="load_files">Load Files</string>
    <string name="list_load_files">Load Files</string>
    
    <string name="load_files_key">load_file_key</string>
    <string name="list_load_files_key">list_load_files_key</string>
    
    <string name="del_touch_file">Remove File</string>
    <string name="list_del_touch_file">Remove touch file</string>
    <string name="removed_file">Removed</string>
    
    <string name="no_list_file">Can\'t find any configuration files</string>
    <string name="sure">Ok</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_joystick_area">Invalid joystick area</string>
    <string name="left_joystick">Left Joystick</string>
    <string name="right_joystick">Right Joystick</string>
    <string name="has_left_joystick">Left Joystick has drew</string>
    <string name="has_right_joystick">right Joystick has drew</string>
    
    <string name="acceleration_dir_title">Acceleration Sensor Direction Setting</string>
    <string name="acceleration_sensitivity_title">Acceleration Sensor Sensitivity</string>
    <string name="acceleration_simulation_enable_title">Acceleration Sensor Hardware Simulation Off/On</string>
    <string name="acceleration_simulation_enable_summary">After the opening of the simulation function, 
    	the acceleration of gravity DPAD_LEFT is negative X-axis, DPAD_RIGHT is positive X-axis, 
    	DPAD_UP is positive Y-axis, DPAD_ DOWN is negative Y-axis</string>
    
    <string name="not_open_acceleration_device_yet">Your controller has not switch to game mode, please switch to game mode first. </string>
    <string name="set_acceleration_direction_error">Set acceleration sensor direction error</string>
    <string name="set_acceleration_delay_error">Set acceleration sensor delay error</string>
    <string name="set_acceleration_data_error">Set acceleration sensor data error</string>
    
    <string name="degree">Degree</string>
    
     <string name="switch_off_game_mode">Switch Off Game Mode</string>
    <string name="switch_to_game_mode">Switch To Game Mode</string>
    
    <string name="unknown">UNKNOWN</string>
    <string name="dpad_center">DPAD_CENTER</string>
    <string name="dpad_left">DPAD_LEFT</string>
    <string name="dpad_right">DPAD_RIGHT</string>
    <string name="dpad_down">DPAD_DOWN</string>
    <string name="dpad_up">DPAD_UP</string>
    <string name="button_a">BUTTON_A</string>
    <string name="button_b">BUTTON_B</string>
    <string name="button_c">BUTTON_C</string>
    <string name="button_x">BUTTON_X</string>
    <string name="button_y">BUTTON_Y</string>
    <string name="button_z">BUTTON_Z</string>
    <string name="button_l1">BUTTON_L1</string>
    <string name="button_r1">BUTTON_R1</string>
    <string name="button_l2">BUTTON_L2</string>
    <string name="button_r2">BUTTON_R2</string>
    <string name="button_thumbl">BUTTON_THUMBL</string>
    <string name="button_thumbr">BUTTON_THUMBR</string>
    <string name="button_start">BUTTON_START</string>
    <string name="button_select">BUTTON_SELECT</string>
    <string name="button_mode">BUTTON_MODE</string>
    <string name="button_1">BUTTON_1</string>
    <string name="button_2">BUTTON_2</string>
    <string name="button_3">BUTTON_3</string>
    <string name="button_4">BUTTON_4</string>
    <string name="button_5">BUTTON_5</string>
    <string name="button_6">BUTTON_6</string>
    <string name="button_7">BUTTON_7</string>
    <string name="button_8">BUTTON_8</string>
    <string name="button_9">BUTTON_9</string>
    <string name="button_10">BUTTON_10</string>
    <string name="button_11">BUTTON_11</string>
    <string name="button_12">BUTTON_12</string>
    <string name="button_13">BUTTON_13</string>
    <string name="button_14">BUTTON_14</string>
    <string name="button_15">BUTTON_15</string>
    <string name="button_16">BUTTON_16</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="clear"></string>
    <string name="clear_success">clear success!</string>
</resources>
