<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preference_title"> 
	<PreferenceCategory  android:title="@string/controller_1">
		  
		<PreferenceScreen android:title="@string/controller_1"
			android:key="@string/controller_1">
			<Preference android:title="@string/dpad_center"
                                android:key="@string/dpad_center"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/dpad_left" 
                                android:key="@string/dpad_left"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/dpad_right"
                                android:key="@string/dpad_right" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/dpad_down"
                                android:key="@string/dpad_down" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/dpad_up"
                                android:key="@string/dpad_up" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_a"
                                android:key="@string/button_a" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_b"
                                android:key="@string/button_b" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_c"
                                android:key="@string/button_c" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_x" 
                                android:key="@string/button_x"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_y" 
                                android:key="@string/button_y"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_z" 
                                android:key="@string/button_z"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_l1" 
                                android:key="@string/button_l1"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_r1" 
                                android:key="@string/button_r1"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_l2" 
                                android:key="@string/button_l2"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_r2" 
                                android:key="@string/button_r2"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_thumbl" 
                                android:key="@string/button_thumbl"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_thumbr" 
                                android:key="@string/button_thumbr"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_start" 
                                android:key="@string/button_start"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_select" 
                                android:key="@string/button_select"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_mode" 
                                android:key="@string/button_mode"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_1" 
                                android:key="@string/button_1"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_2" 
                                android:key="@string/button_2"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_3"
				android:key="@string/button_3" 
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_4" 
                                android:key="@string/button_4"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_5" 
                                android:key="@string/button_5"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_6" 
                                android:key="@string/button_6"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_7" 
                                android:key="@string/button_7"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_8" 
                                android:key="@string/button_8"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_9" 
                                android:key="@string/button_9"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_10" 
                                android:key="@string/button_10"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_11" 
                                android:key="@string/button_11"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_12" 
                                android:key="@string/button_12"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_13" 
                                android:key="@string/button_13"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_14" 
                                android:key="@string/button_14"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_15" 
                                android:key="@string/button_15"
                                android:summary="@string/unknown"/>
                        <Preference android:title="@string/button_16" 
                                android:key="@string/button_16"
                                android:summary="@string/unknown"/>
			<Preference android:title="@string/a"
				android:key="@string/a"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/b"
				android:key="@string/b"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/c"
				android:key="@string/c"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/d"
				android:key="@string/d"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/e"
				android:key="@string/e"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/f"
				android:key="@string/f"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/g"
				android:key="@string/g"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/h"
				android:key="@string/h"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/i"
				android:key="@string/i"
				android:summary="@string/unknown"/>
  			<Preference android:title="@string/j"
				android:key="@string/j"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/k"
				android:key="@string/k"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/l"
				android:key="@string/l"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/m"
				android:key="@string/m"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/n"
				android:key="@string/n"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/o"
				android:key="@string/o"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/p"
				android:key="@string/p"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/q"
				android:key="@string/q"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/r"
				android:key="@string/r"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/s"
				android:key="@string/s"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/t"
				android:key="@string/t"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/u"
				android:key="@string/u"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/v"
				android:key="@string/v"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/w"
				android:key="@string/w"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/x"
				android:key="@string/x"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/y"
				android:key="@string/y"
				android:summary="@string/unknown"/>
			<Preference android:title="@string/z"
				android:key="@string/z"
				android:summary="@string/unknown"/>
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/clear_controller_1"
			android:key="@string/clear_controller_1">
			<Preference android:title="@string/clear_controller_1"
				android:key="@string/clear"
				/>
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>
