<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<LinearLayout android:orientation="horizontal" 
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
<EditText android:id="@+id/fileNameText01"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/fileNameEditText"/>
</LinearLayout>

<RelativeLayout 
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
<TextView android:id="@+id/infoText01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<Button android:id="@+id/noButton01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_toLeftOf="@+id/sureButton01"
	android:text="@string/noFileYesBtn"/>
<Button android:id="@+id/sureButton01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/saveFileYesBtn"
	android:layout_alignParentRight="true"/>
</RelativeLayout>
</LinearLayout>
